--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "farray",
-  "description": "Zaif API client for Node.js",
+  "description": "TypeScript-first functional array utility",
   "version": "0.0.0",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
@@ -19,9 +19,10 @@
     "lint:yamllint": "yamllint **/*.yaml --ignore=node_modules/**/* --ignore=pnpm-lock.yaml",
     "lint": "run-p lint:*",
     "test:unit": "jest",
+    "test:types": "tsd _tsd",
     "test": "run-p test:*",
     "build:scripts": "node -r @swc/register scripts/build.ts",
-    "build:types": "tsc -p tsconfig.build.json --emitDeclarationOnly && tsc-alias -p tsconfig.build.json",
+    "build:types": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "build": "run-p build:*",
     "release": "semantic-release"
   },
@@ -51,6 +52,7 @@
     "eslint": "^8.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-sort-export-all": "^1.2.1",
     "eslint-plugin-tsdoc": "^0.2.14",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
@@ -61,9 +63,11 @@
     "prettier": "^2.4.1",
     "semantic-release": "^18.0.0",
     "semantic-release-gitmoji": "^1.4.2",
+    "ts-expect": "^1.3.0",
     "tsc-alias": "^1.4.0",
     "tsc-files": "^1.1.2",
     "tsconfig-paths": "^3.11.0",
+    "tsd": "^0.18.0",
     "typescript": "^4.4.4",
     "yaml-lint": "^1.2.4"
   },
