--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "sideEffects": false,
   "license": "MIT",
+  "dependencies": {},
   "devDependencies": {
     "@commitlint/cli": "^14.1.0",
     "@semantic-release/changelog": "^6.0.1",
